--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": ".eleventy.js",
   "scripts": {
-    "start": "npx eleventy --serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx gulp && concurrently \"npx gulp watch\" \"npx eleventy --serve\"",
+    "production": "NODE_ENV=production npx gulp && NODE_ENV=production npx eleventy",
+    "production-win": "SET NODE_ENV=production & npx gulp && SET NODE_ENV=production & npx eleventy"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,17 @@
     "@11ty/eleventy": "^0.11.1",
     "@sanity/block-content-to-markdown": "0.0.5",
     "@sanity/client": "^2.0.1",
+    "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
+    "get-google-fonts": "^1.2.2",
+    "groq": "^2.0.1",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-sass": "^4.1.0",
     "markdown-it": "^11.0.1",
     "markdown-it-anchor": "^6.0.0",
     "moment": "^2.29.1",
-    "groq": "^2.0.1"
+    "sass": "^1.29.0"
   }
 }
