--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "get-google-fonts": "^1.2.2",
+    "gorko": "^0.2.3",
     "groq": "^2.0.1",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
