--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "npm run production"
   publish = "dist"
+
+[[redirects]]
+  from = "/"
+  to = "/en/"
+  status = 301
+  force = true
